--- a/RosePineYoutube.user.css
+++ b/RosePineYoutube.user.css
@@ -871,7 +871,8 @@
 	#video-title.ytd-video-renderer,
 	h3.ytd-playlist-renderer,
 	#video-title.ytd-child-video-renderer, #length.ytd-child-video-renderer,
-	#video-title, #unplayableText, #length, #details
+	#video-title, #unplayableText, #length, #details,
+	.ShortsLockupViewModelHostEndpoint .yt-core-attributed-string--white-space-pre-wrap
 	{
 		color: var(--main-text) !important;
 	}
