Fix syntax error in second background color definition in CSS

--- a/RosePineYoutube.user.css
+++ b/RosePineYoutube.user.css
@@ -71,7 +71,7 @@
 				--main-color: #c4a7e7;
 			}
 			--main-background: #191724;
-			--second-background: #1f1d2e#;
+			--second-background: #1f1d2e;
 			--hover-background: #26233a;
 			--main-text: #e0def4;
 			--dimmer-text: #908caa;
